@@ -304,6 +304,8 @@ III) MAJOR CHANGES FROM PREVIOUS RELEASES
        Canon PIXMA MX330 (EXPERIMENTAL)
        Canon PIXMA MX340 (EXPERIMENTAL)
        Canon PIXMA MX350 (EXPERIMENTAL)
+       Canon PIXMA MX360 (EXPERIMENTAL)
+       Canon PIXMA MX410 (EXPERIMENTAL)
        Canon PIXMA MX420 (EXPERIMENTAL)
        Canon PIXMA MX700 (EXPERIMENTAL)
        Canon PIXMA MX850 (EXPERIMENTAL)
